fixed form alignment

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ header {
   background-color: #ff385c;
   padding: 20px 20px 0 20px;
   text-align: center;
+  align-items: center;
 }
 
 .logo {
@@ -74,7 +75,7 @@ header {
 header nav {
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin-left: 20px;
 }
 
 header nav ul {
@@ -153,11 +154,12 @@ footer p {
   header {
     display: flex;
     justify-content: space-between;
-    padding: 0 30px;
+    padding: 0 10px;
   }
 
   .logo {
     width: auto;
+    margin-left: 0px;
     margin: 0;
     text-align: left;
   }
@@ -170,19 +172,26 @@ footer p {
     margin-left: auto;
   }
 
+  #stay {
+    display: flex;
+    flex-direction: column;
+  }
+
   form {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 0px;
   }
 
   .form-group {
     flex-direction: column;
-    justify-content: space-between;
     align-items: baseline;
+  }
+  
+  form select,
+  form input {
+    width: 100%;
   }
 
   #about {
